# LinearAlgebra

./: CMakeLists.txt  CMakePresets.json  ConjugateGradient.cpp  ConjugateGradient.h  GaussianElimination.cpp  GaussianElimination.h  GivensRotations.cpp  GivensRotations.h  LUFactorisation.cpp  LUFactorisation.h  Matrix.cpp  Matrix.h  README.md  Vec.cpp  Vec.h  gillespie.cpp  gillespie.h  helpers.h  main  main.cpp  makefile  test_gaussianElimination.cpp
ProblemSheets/: SciComp.ipynb  ScientificComputingSheet2.typ  ScientificComputingSheet4.typ  ScientificComputingSheet5.typ
tests/: test  test_LUFactorisation.cpp  test_conjugateGradient.cpp  test_gaussianElimination.cpp  test_givensRotations.cpp  test_main.cpp  test_matrix.cpp  test_vec.cpp
